<resources>
    <string name="app_name">cadastroBancoDados</string>
    <string name="cod">Cod:</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="incluir">Incluir</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="listar">Listar</string>
</resources>